# pdga-whats-my-rating

./: .gitignore  CLAUDE.md  README.md  numbers-for-testing.txt  pyproject.toml
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
pdga_whats_my_rating/: Home.py
pdga_whats_my_rating/classes/: player.py
pdga_whats_my_rating/pages_NOTREADY/: 1_Enter_New_Tournament.py
pdga_whats_my_rating/utils/: figs.py  pdga_scraper.py  rating_calc.py
tests/: conftest.py  test_home.py  test_rating_accuracy.py  test_rating_calc.py  test_retry.py
tests/fixtures/: player_123400_unknown.csv  player_12989_2026-02-10.csv  player_146195_2025-11-11.csv  player_167210_2025-10-14.csv  player_167214_2025-08-12.csv  player_204766_2025-11-11.csv  player_27523_2025-11-11.csv  player_298827_2026-03-10.csv  player_45971_2026-02-10.csv
