[project]
name = "pdga-whats-my-rating"
version = "0.1.0"
description = "Unofficial PDGA player rating calculator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.33.0",
    "streamlit-extras>=0.4.2",
    "plotly>=5.22.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pdga_whats_my_rating"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
